[package]
name = "black-pill-stm32f401"
version = "0.1.0"
edition = "2021"


[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
panic-semihosting = "0.5.4"
panic-halt = "0.2.0"
stm32f4xx-hal = { version = "0.8.3", features = ["rt", "stm32f401", "usb_fs"] }
cortex-m-semihosting = "0.3.5"
arrayvec = { version = "0.5.2", default-features = false }
ssd1306 = "0.4.0"
embedded-graphics = "0.6.2"
usb-device = "0.2.7"
usbd-serial = "0.1.1"
micromath = "1.1.0"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[[bin]]
name = "black-pill-stm32f401"
path = "src/main.rs"
test = false
bench = false